trying to fix the overflow issue

--- a/src/components/home/home.style.desktop.scss
+++ b/src/components/home/home.style.desktop.scss
@@ -1,5 +1,7 @@
+@import '../../styles/styles.fonts.desktop.scss';
+
 @media(min-width: 769px) {
   html, body {
-    color: red;
+    // @extend .test_fonts;
   }
 }
